assets/css/style.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap');

/* Asterisk wildcard selector to override default styles added by the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* Global Styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    color: #231E24;
    font-weight: 600;
    font-family: 'IBM Plex Sans', sans-serif;
}

:root {
--box-shadow-bottom: 0 2px 4px #421305;
--box-shadow-top: 0 -2px 4px #421305;
--primary-bg-green: #78CB54;
--alt-bg-brown: #421305;
--opaque-60-bg-green: #78CB54CC;
--alt-text-green: #78CB54;
--alt-text-brown: #421305; 
}

h1,
h2,
h3 {
    font-family: 'Bubblegum Sans', sans-serif;
    text-transform: uppercase;
    letter-spacing: 1px;
    color: var(--alt-text-brown);
}

.hidden-heading {
    display: none;
}

/* Header */

header {
    background-color: var(--primary-bg-green);
    color: var(--alt-text-green);
    width: 100vw;
    min-height: 50px;
    padding: 0px .5rem;
    position: fixed;
    z-index: 99;
    /* box-shadow: 0 2px 4px #421305; */
    box-shadow: var(--box-shadow-bottom);
    display: flex;
    justify-content: space-between;
    align-items: center;
}

header a {
    color: inherit;
}

#logo {
    color: var(--alt-text-brown);
}

#main-menu {
    font-family: 'Bubblegum Sans', sans-serif;
    color: var(--alt-text-brown);
}

#main-menu a {
    text-decoration: none;
    padding: 0 4px;
    border-radius: 3px;
}

#main-menu li {
    list-style-type: none;
    margin: 5px 0;
    font-size: 150%;
}

.current {
    border-bottom: 2px solid #421305;
    border-radius: 3px;
}

/* Navbar styles with dropdown toggle */
nav {
    position: absolute;
    background-color: var(--primary-bg-green);
    right: 0;
    padding: 0 .5rem;
    box-shadow: 0 0 4px .2rem #421305;
    display: none;
    top: 100%;
    margin-bottom: 5px;
}

/* Nav toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 1.5rem;
}

/* Main */
main {
    /* Make main element take up any surplus space to push footer down */
    flex: 1 0 auto;
    /* Add margin at the top to prevent content from being covered by the header */
    margin-top: 50px;
    display: flex;
    flex-direction: column;
    padding: 0px .5rem;
}

#hero {
    height: 600px;
    width: 100%;
    background: url('../images/main-bg.webp') no-repeat center center/cover;
    position: relative;
}

#intro {
    background-color: var(--opaque-60-bg-green);
    display: block;
    width: 250px;
    height: auto;
    align-self: center;
    border-radius: 5px;
    padding: 1rem;
    text-align: justify;
    margin-top: 1.5rem;
    box-shadow: var(--box-shadow-bottom);
}

#committee > div {
    display: flex;
    flex-direction: row-reverse;
    margin: 1.5rem .5rem;
}

#committee-table {
    background-color: var(--primary-bg-green);
    display: flex;
    width: fit-content;
    border-collapse: collapse;
}

#committee-table th {
    background-color: var(--alt-bg-brown);
    border: 2px solid #421305;
    color: var(--alt-text-green);
    padding: .5em;
}

#committee-table td {
    border: 2px solid #421305;
    margin-top: -2px;
    padding: .5em;
    text-align: center;
}

/* Footer */
footer {
    background-color: var(--primary-bg-green);
    width: 100%;
    padding: 0px .5rem;
    position: relative;
    z-index: 99;
    box-shadow: var(--box-shadow-top);
    display: block;
    justify-content: space-between;
    align-items: baseline;
}

#socials {
    padding: 5px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#socials i {
    font-size: 200%;
    color: var(--alt-text-brown);
    padding: 15%;
}

#socials img {
    color: var(--alt-text-brown);
    padding: 15%;
}

/* Media query: large or landscape phones (576px and up) */
@media screen and (min-width: 576px) {
    #memories {
        column-count: 2;
        column-gap: 0;
    }

    #intro {
        align-self: flex-start;
        width: 500px;
        margin: 5% 3%;
    }
}

/* Media query: tablets and larger (768px and up) */
@media screen and (min-width: 768px) {

    /* Header */
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-right: 1rem;
    }

    #main-menu {
        display: flex;
    }

    #main-menu > li {
        padding-left: 1rem;
    }

    #main-menu a:hover {
        background-color: var(--alt-bg-brown);
        color: var(--alt-text-green);
        border-radius: 2px;
    }
    .nav-toggle-label {
        display: none;
    }

    #logo {
        margin: 0 0.5rem;
    }

    /* Main content */
    main {
        /* Push main content down to accommodate larger header */
        margin-top: 50px;
    }

    /* Memories Page */

    #memories {
        column-count: 3;
    }

    /* Contact Us Page */

    #member-form {
        background-position: center;
        position: relative;
    }

    #signup-form {
        position: absolute;
        max-width: 400px;
        top: 150px;
        left: 10%;
    }

    .text-input:hover {
        border-color: #f16c6b;
    }

    .join-button:hover {
        background-color: #fafafa;
        color: #454b1b;
    }
}

/* Media query: laptops and larger (992px and up) */
@media screen and (min-width: 992px) {
    
    #memories {
        column-count: 4;
    }
}

/* Media query: screens 1200px and up for reasons section */
@media screen and (min-width: 1200px) {

}

